force-app/main/default/objects/sub_options__c/sub_options__c.object-meta.xml
<CustomObject>
    <label>Sub Options</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>