force-app/main/default/objects/sub_options__c/fields/Adult__c.field-meta.xml
<CustomField>
    <fullName>Adult__c</fullName>
    <label>Adult</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>