force-app/main/default/objects/sub_options__c/fields/Adult_plus_Child__c.field-meta.xml
<CustomField>
    <fullName>Adult_plus_Child__c</fullName>
    <formula>Adult__c +  Child__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adult plus Child</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>