force-app/main/default/objects/sub_options__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <label>Child</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>