force-app/main/default/objects/sub_options__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Sub Options</relationshipLabel>
    <relationshipName>Sub_Options</relationshipName>
    <type>Lookup</type>
</CustomField>