force-app/main/default/objects/sub_options__c/fields/deal_record_type_id__c.field-meta.xml
<CustomField>
    <fullName>deal_record_type_id__c</fullName>
    <formula>options__r.Deal__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>deal record type id</label>
    <type>Text</type>
</CustomField>