force-app/main/default/objects/sub_options__c/fields/Departed__c.field-meta.xml
<CustomField>
    <fullName>Departed__c</fullName>
    <label>Departed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>