force-app/main/default/objects/sub_options__c/fields/Herokuid__c.field-meta.xml
<CustomField>
    <fullName>Herokuid__c</fullName>
    <externalId>true</externalId>
    <label>Herokuid</label>
    <length>10</length>
    <type>Text</type>
</CustomField>