force-app/main/default/objects/sub_options__c/fields/Hotel_Code__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Code__c</fullName>
    <formula>Deal__r.Hotel_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Code</label>
    <type>Text</type>
</CustomField>