force-app/main/default/objects/sub_options__c/fields/hotel_context__c.field-meta.xml
<CustomField>
    <fullName>hotel_context__c</fullName>
    <label>Hotel Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>