force-app/main/default/objects/sub_options__c/fields/is_stay__c.field-meta.xml
<CustomField>
    <fullName>is_stay__c</fullName>
    <formula>IF(OR(INCLUDES( options__r.Deal__r.deal_type__c , &apos;stay&apos;), INCLUDES( options__r.Deal__r.deal_type_nz__c  , &apos;stay&apos;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Stay</label>
    <type>Checkbox</type>
</CustomField>