force-app/main/default/objects/sub_options__c/fields/itinerary_context__c.field-meta.xml
<CustomField>
    <fullName>itinerary_context__c</fullName>
    <label>Itinerary Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Package</fullName>
            </value>
            <value>
                <fullName>Pre Extension</fullName>
            </value>
            <value>
                <fullName>Post Extension</fullName>
            </value>
            <value>
                <fullName>Both Extensions</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>