force-app/main/default/objects/sub_options__c/fields/Linked_Deal_Via_Opt__c.field-meta.xml
<CustomField>
    <fullName>Linked_Deal_Via_Opt__c</fullName>
    <formula>options__r.Deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Deal Via Opt</label>
    <type>Text</type>
</CustomField>