force-app/main/default/objects/sub_options__c/fields/Maximum_Adults__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Adults__c</fullName>
    <label>Maximum Adults</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>