force-app/main/default/objects/sub_options__c/fields/Maximum_Children__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Children__c</fullName>
    <label>Maximum Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>