force-app/main/default/objects/sub_options__c/fields/Maximum_Infants__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Infants__c</fullName>
    <label>Maximum Infants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>