force-app/main/default/objects/sub_options__c/fields/Maximum_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Occupancy__c</fullName>
    <description>Maximum Guests that can be held in a room.</description>
    <label>Maximum Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>