force-app/main/default/objects/sub_options__c/fields/Merchant_Booking_URL__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Booking_URL__c</fullName>
    <label>Merchant Booking URL</label>
    <type>Url</type>
</CustomField>