force-app/main/default/objects/sub_options__c/fields/options__c.field-meta.xml
<CustomField>
    <fullName>options__c</fullName>
    <label>options</label>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>Sub Options</relationshipLabel>
    <relationshipName>sub_options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>