force-app/main/default/objects/sub_options__c/fields/OptionsTitle__c.field-meta.xml
<CustomField>
    <fullName>OptionsTitle__c</fullName>
    <formula>options__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Options1</label>
    <type>Text</type>
</CustomField>