force-app/main/default/objects/sub_options__c/fields/Price1__c.field-meta.xml
<CustomField>
    <fullName>Price1__c</fullName>
    <label>Price1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>