force-app/main/default/objects/sub_options__c/fields/Price_formula__c.field-meta.xml
<CustomField>
    <fullName>Price_formula__c</fullName>
    <formula>IF((Price1__c - options__r.price__c) &lt; 0, 0, Price1__c - options__r.price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>