force-app/main/default/objects/sub_options__c/fields/price_formula_nz__c.field-meta.xml
<CustomField>
    <fullName>price_formula_nz__c</fullName>
    <formula>IF((price_nz__c - options__r.price_nz__c) &lt; 0, 0, price_nz__c - options__r.price_nz__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Formula - NZD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>