force-app/main/default/objects/sub_options__c/fields/Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Plan</label>
    <referenceTo>Rate_Plan__c</referenceTo>
    <relationshipLabel>Sub Options</relationshipLabel>
    <relationshipName>Sub_Options</relationshipName>
    <type>Lookup</type>
</CustomField>