force-app/main/default/objects/sub_options__c/fields/Rate_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan_Code__c</fullName>
    <formula>Rate_Plan__r.Rate_Plan_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Plan Code</label>
    <type>Text</type>
</CustomField>