force-app/main/default/objects/sub_options__c/fields/Room_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Room_Type_Code__c</fullName>
    <label>Room Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>