force-app/main/default/objects/sub_options__c/fields/Room_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Room_Type_Description__c</fullName>
    <label>Room Type Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>