force-app/main/default/objects/sub_options__c/fields/solo_surcharge_nz__c.field-meta.xml
<CustomField>
    <fullName>solo_surcharge_nz__c</fullName>
    <label>Solo Surcharge - NZD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>