force-app/main/default/objects/sub_options__c/fields/STD_OPT__c.field-meta.xml
<CustomField>
    <fullName>STD_OPT__c</fullName>
    <inlineHelpText>Please select this sub option for core package or an upgrade option.</inlineHelpText>
    <label>STD/OPT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option</fullName>
                <default>true</default>
                <label>Option</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>