force-app/main/default/objects/sub_options__c/fields/Sub_related_component_cost__c.field-meta.xml
<CustomField>
    <fullName>Sub_related_component_cost__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Sub related component cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>