force-app/main/default/objects/sub_options__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>