force-app/main/default/objects/sub_options__c/fields/title_override__c.field-meta.xml
<CustomField>
    <fullName>title_override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Currently only affects stay deals! Mostly used for stay deals with children included in the sub option.</inlineHelpText>
    <label>Title Override</label>
    <type>Checkbox</type>
</CustomField>