force-app/main/default/objects/sub_options__c/fields/Total_Allocation_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation_Sold__c</fullName>
    <label>Total Allocation Sold</label>
    <summarizedField>NRMA__c.QTY_Number__c</summarizedField>
    <summaryFilterItems>
        <field>NRMA__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>NRMA__c.sub_options__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>