force-app/main/default/objects/sub_options__c/recordTypes/Room_Type.recordType-meta.xml
<RecordType>
    <fullName>Room_Type</fullName>
    <active>true</active>
    <description>This is new record type being created so that we can distinguish between Sub option record and a Room Type.</description>
    <label>Room Type</label>
</RecordType>