force-app/main/default/objects/sub_options__c/recordTypes/Sub_Option.recordType-meta.xml
<RecordType>
    <fullName>Sub_Option</fullName>
    <active>true</active>
    <description>This is a record type for creating a normal Sub Option Record.</description>
    <label>Sub Option</label>
</RecordType>