force-app/main/default/objects/sub_options__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>title__c</columns>
    <columns>price__c</columns>
    <columns>solo_surcharge__c</columns>
    <columns>options__c</columns>
    <columns>Deal__c</columns>
    <columns>Price1__c</columns>
    <columns>price_nz__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>